Fix text overflow in chat headings
- Set h3 width to 0 to prevent overflow issues

--- a/packages/custom-chat/src/assets/main.scss
+++ b/packages/custom-chat/src/assets/main.scss
@@ -12,6 +12,7 @@ main {
 
     h3 {
       margin: 0;
+      width: 0;
     }
   }
 }
